# hydrus-software-stack

./: .gitignore  README.md  camera-entrypoint.sh  jetson.sh  requirements.txt  ros-entrypoint.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
DVL/Wayfinder/: LICENSE.TXT  driver_test.py
DVL/Wayfinder/dvl/: dvl.py  util.py
Embedded_IMU/: imu_driver.py
autonomy/: CMakeLists.txt  package.xml
autonomy/action/: NavigateToWaypoint.action
autonomy/launch/: autonomy.launch
autonomy/msg/: Detection.msg  Detections.msg  Mission.msg
autonomy/scripts/controller/: color_filter.py
autonomy/scripts/cv/: color_filters.py  object_detector.py  orbs.py
autonomy/src/: API.py  Api.py  controller_tester.py  controllers.py  custom_types.py  cv_algorithms.py  cv_publishers.py  main.py  publishers.py  ros_mission_planning.py  types.py
autonomy/srv/: SetColorFilter.srv
computer_vision/: CMakeLists.txt  README.md  package.xml
computer_vision/launch/: detector.launch  zed_rosbag.launch
computer_vision/msg/: Detections.msg
computer_vision/scripts/: color_filters.py  distance.py  enable_detector.py  object_detector.py  plane_detection.py  set_custom_classes.py
computer_vision/src/: algorithms.py  node.py  subscriber_logger.py  viewer.py  webcam.py  zed_node.py
controller/: CMakeLists.txt  package.xml
controller/configs/: services.yml  topics.yml
controller/launch/: control.launch
controller/scripts/: call_target_point.py  set_parameters.py  subscriber_demo.py
controller/src/: controller.py
controller/srv/: NavigateToWaypoint.srv  SetParameters.srv
docker/: README.md  docker-compose-amd64-cpu.yaml  docker-compose-amd64-cuda.yaml  docker-compose-jetson-tx2.yaml  docker-compose.yml  jetson.sh  run_docker.sh
docker/amd64/: hydrus.Dockerfile
docker/amd64/cpu/: hydrus.Dockerfile
docker/amd64/cuda/: camera.Dockerfile  hydrus.Dockerfile
docker/cv/: Dockerfile
docker/jetson/: camera.Dockerfile  hydrus.Dockerfile
embedded_arduino/: README.md
embedded_arduino/Hydrus/: Hydrus.ino  devices.h  ros_embedded_node.cpp  ros_embedded_node.h  thrusters.cpp
hydrus/: CMakeLists.txt  package.xml
hydrus/launch/: hydrus_start.xml
hydrus/src/: loggers.py
hydrus_cv/: README.md  package.xml  setup.cfg  setup.py
hydrus_cv/hydrus_cv/: camera.py  ultralytics_modules.py  zed_camera.py
hydrus_cv/hydrus_cv/config/: params.yaml
hydrus_cv/hydrus_cv/launch/: zed_camera_launch.py
hydrus_mission_planning/: README.md  package.xml  setup.cfg  setup.py
hydrus_simulation/: README.md  package.xml  setup.cfg  setup.py
mission/: CMakeLists.txt  package.xml
mission/src/: move_around_object.py  movement.py
simulator/: CMakeLists.txt  README.md  package.xml
simulator/launch/: cube.launch  pool_world.launch
simulator/models/: cube.sdf
simulator/scripts/: spawn_cube.py
simulator/src/: buoyancy_force.cpp
simulator/worlds/: buoyant_pool.sdf  pool.world
tests/: README.md
