<?xml version="1.0"?>
<package format="2">
  <name>controller</name>
  <version>0.1.0</version>
  <description>The controller_node package</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Common build tool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <!-- Dependencies for message and service generation -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
