<?xml version="1.0"?>
<package format="2">
  <name>hydrus</name>
  <version>0.1.0</version>
  <description>The hydrus package</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Common build tool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>controller_node</depend>
  <depend>detector_node</depend>
  <depend>embedded_arduino</depend>
  <depend>mission_node</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
